# single_trial_nddm_compare

./: .dockerignore  .gitignore  Dockerfile  README.md  demo_single_trial_integrative_joint_modeling.ipynb  entrypoint.sh  pyproject.toml  slurm_integrative_ddm_train.sh  workshop_steps.md
integrative_model/checkpoints/: training_history_integrative_ddm_seed_12.pkl
scripts/: integrative_ddm_analyze_results_factorial.py  integrative_ddm_data_check.py  integrative_ddm_train.py  integrative_ddm_train_run_test.py
